actualizando numero de version

--- a/mate-themes/icon-themes/Crux/Makefile.in
+++ b/mate-themes/icon-themes/Crux/Makefile.in
@@ -242,7 +242,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-themedir = $(datadir)/icons/Crux
+themedir = $(datadir)/icons/MateCrux
 SUBDIRS = 16x16 22x22 24x24 32x32 scalable
 THEME_IN_FILES = index.theme.in
 theme_DATA = index.theme
