--- a/mate-themes/icon-themes/HighContrast-SVG/Makefile.am
+++ b/mate-themes/icon-themes/HighContrast-SVG/Makefile.am
@@ -1,6 +1,6 @@
 @INTLTOOL_THEME_RULE@
 
-themedir = $(datadir)/icons/HighContrast-SVG
+themedir = $(datadir)/icons/MateHighContrast-SVG
 
 theme_in_files = index.theme.in
 theme_DATA = $(theme_in_files:.theme.in=.theme)
