--- a/mate-themes/icon-themes/HighContrast-SVG/Makefile.in
+++ b/mate-themes/icon-themes/HighContrast-SVG/Makefile.in
@@ -242,7 +242,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-themedir = $(datadir)/icons/HighContrast-SVG
+themedir = $(datadir)/icons/MateHighContrast-SVG
 theme_in_files = index.theme.in
 theme_DATA = $(theme_in_files:.theme.in=.theme)
 SUBDIRS = scalable 48x48
