--- a/mate-themes/icon-themes/Mist/Makefile.in
+++ b/mate-themes/icon-themes/Mist/Makefile.in
@@ -242,7 +242,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-themedir = $(datadir)/icons/Mist
+themedir = $(datadir)/icons/MateMist
 SUBDIRS = 16x16 22x22 24x24 32x32 48x48 256x256
 THEME_IN_FILES = index.theme.in
 theme_DATA = index.theme
