actualizando scripts de archlinux

--- a/libmatecomponent/distro/archlinux/PKGBUILD
+++ b/libmatecomponent/distro/archlinux/PKGBUILD
@@ -1,13 +1,13 @@
 pkgname=libmatecomponent
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="A set of language and system independant CORBA interfaces for creating reusable components"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL' 'LGPL')
 depends=('mate-corba' 'libxml2' 'glib2')
 makedepends=('intltool' 'pkgconfig' 'flex')
 groups=('mate')
-options=()
+options=('!emptydirs' '!libtool')
 backup=('etc/matecomponent-activation/matecomponent-activation-config.xml')
 url="http://www.gnome.org"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
