--- a/libmatecomponentui/distro/archlinux/PKGBUILD
+++ b/libmatecomponentui/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=libmatecomponentui
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="User Interface library for MateComponent"
 arch=('i686' 'x86_64')
@@ -7,7 +7,7 @@ license=('GPL' 'LGPL')
 depends=('libmatecanvas' 'libmate')
 makedepends=('intltool' 'pkgconfig')
 groups=('mate')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
 sha256sums=('68fb05801853a13a4335ee74ab15a5bfa1e7586bacd4e73a23510f3f6b7d2e2f')
