--- a/libmatekbd/distro/archlinux/PKGBUILD
+++ b/libmatekbd/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=libmatekbd
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="MATE keyboard library"
 arch=('i686' 'x86_64')
@@ -8,10 +8,11 @@ depends=('libxklavier' 'mate-conf') #  'dconf'
 makedepends=('intltool' 'pkgconfig')
 groups=('mate')
 url="http://matsusoft.com.ar/projects"
-options=('!emptydirs')
+# there is a file with .la extension, such a bug
+#options=('!emptydirs' '!libtool')
 install=libmatekbd.install
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('dc11dad9a1e2e2862ad9fdb03844d8b4f3de3bed32670d5d6a5ff10c3be520bf')
+sha256sums=('720c98c7f2c69d0c4b1db76da433a5bbbee414edb9d5689a632da13cbd456730')
 
 build() {
 	cd "${srcdir}/${pkgname}"
