--- a/libmatekeyring/distro/archlinux/PKGBUILD
+++ b/libmatekeyring/distro/archlinux/PKGBUILD
@@ -1,13 +1,13 @@
 pkgname=libmatekeyring
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="MATE keyring client library"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL' 'LGPL')
 depends=('libgcrypt') # 'eggdbus' 'mate-keyring'
 makedepends=('intltool' 'pkgconfig' 'python')
 groups=('mate')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
 sha256sums=('279a9b1ddcf178e6a3d562ad9e517177262739b27ab62d9ecab68edf455c2a24')
