--- a/libmatenotify/distro/archlinux/PKGBUILD
+++ b/libmatenotify/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=libmatenotify
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="Desktop notification library"
 arch=('i686' 'x86_64')
@@ -7,7 +7,7 @@ license=('LGPL')
 depends=('gdk-pixbuf2')
 makedepends=('gtk2' 'gobject-introspection')
 groups=('mate')
-options=()
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
 sha256sums=('7ca728029e1e53c9cf4ae4f0dd3acd2ac6c0fc61fb25826c4faf0c2fbe15be6e')
