--- a/libmateweather/distro/archlinux/PKGBUILD
+++ b/libmateweather/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=libmateweather
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="Provides access to weather information from the net"
 arch=('i686' 'x86_64')
@@ -7,7 +7,7 @@ license=('LGPL')
 depends=('mate-conf') #  'libsoup-mate'  'mate-icon-theme'
 makedepends=('pkgconfig' 'intltool' 'gtk-doc')
 groups=('mate')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 url="http://www.gnome.org/"
 install=libmateweather.install
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
