--- a/mate-conf/distro/archlinux/PKGBUILD
+++ b/mate-conf/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-conf
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="A configuration database system"
 arch=(i686 x86_64)
@@ -7,6 +7,7 @@ license=('LGPL')
 depends=('mate-corba' 'libxml2' 'polkit' 'libldap' 'dbus-glib' 'gtk2')
 makedepends=('pkgconfig' 'intltool' 'gtk-doc' 'gobject-introspection')
 groups=('mate')
+options=('!emptydirs' '!libtool')
 install=mate-conf.install
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
