--- a/mate-control-center/distro/archlinux/PKGBUILD
+++ b/mate-control-center/distro/archlinux/PKGBUILD
@@ -1,12 +1,12 @@
 pkgname=mate-control-center
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="The Control Center for MATE"
 arch=('i686' 'x86_64')
 license=('GPL')
 depends=('mate-window-manager' 'libxss' 'desktop-file-utils' 'mate-settings-daemon' 'libmatekbd' 'libcanberra' 'sound-theme-freedesktop' 'libunique' 'mate-menus' 'librsvg') #  'evolution-data-server>=2.29.92'
 makedepends=('mate-doc-utils' 'pkgconfig' 'intltool')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 install=mate-control-center.install
