--- a/mate-corba/distro/archlinux/PKGBUILD
+++ b/mate-corba/distro/archlinux/PKGBUILD
@@ -1,12 +1,12 @@
 pkgname=mate-corba
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="Thin/fast CORBA ORB"
 arch=('i686' 'x86_64')
 license=('LGPL' 'GPL')
 depends=('libidl2>=0.8.11')
 makedepends=('pkgconfig')
-options=('!makeflags')
+options=('!makeflags' '!emptydirs' '!libtool')
 groups=('mate')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
