--- a/mate-dialogs/distro/archlinux/PKGBUILD
+++ b/mate-dialogs/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-dialogs
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="Display graphical dialog boxes from shell scripts"
 arch=(i686 x86_64)
@@ -10,6 +10,7 @@ url="http://matsusoft.com.ar/projects"
 groups=('mate')
 provides=('zenity')
 conflicts=('zenity')
+options=('!emptydirs' '!libtool')
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
 sha256sums=('2853e491701a6e09a0378a32fff954bce3ffd776340d2c3e3790d406cf0a347a')
 
