--- a/mate-display-manager/distro/archlinux/PKGBUILD
+++ b/mate-display-manager/distro/archlinux/PKGBUILD
@@ -1,12 +1,13 @@
 pkgname=mate-display-manager
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="The MATE Display Manager"
 arch=(i686 x86_64)
 license=('GPL')
 depends=('pam' 'libdmx' 'tcp_wrappers' 'mate-panel' 'libmatecanvas' 'librsvg' 'gksu' 'dbus-glib' 'consolekit' 'mate-dialogs')
 makedepends=('pkgconfig' 'intltool' 'mate-doc-utils' 'xtrans' 'xorg-server')
-options=('!emptydirs')
+# do not add !emptydirs
+options=('!libtool')
 install=mate-display-manager.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate-extras')
@@ -26,7 +27,7 @@ build() {
 	./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/mdm \
 		--localstatedir=/var --disable-static \
 		--with-at-spi-registryd-directory=/usr/lib/at-spi \
-		--disable-scrollkeeper || return 1
+		--disable-scrollkeeper --disable-debug || return 1
 
 	make
 }
@@ -39,14 +40,21 @@ package() {
 	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas
 	rm -f ${pkgdir}/etc/mateconf/schemas/*.schemas
 
+	# fix for wrong path to executables
+	_path=${pkgdir}/usr/share/mdm/autostart/LoginWindow
+
+	sed -i 's_/usr/lib/mdm/_/usr/lib/polkit-mate/_' ${_path}/polkit-mate-authentication-agent-1.desktop
+	sed -i 's_/usr/lib/mdm/__' ${_path}/mate-settings-daemon.desktop
+
+
 	install -m644 "${srcdir}/mdm.pam" "${pkgdir}/etc/pam.d/mdm"
 	install -m644 "${srcdir}/mdm-autologin.pam" "${pkgdir}/etc/pam.d/mdm-autologin"
 
 	install -m755 -d "${pkgdir}/etc/rc.d"
 	install -m755 "${srcdir}/mdm" "${pkgdir}/etc/rc.d/"
 
-	rmdir "${pkgdir}/var/mdm"
-	mdkir "${pkgdir}/var/log/mdm"
-	chmod 1770 "${pkgdir}/var/log/mdm"
-	rm -rf "${pkgdir}/var/run"
+	#rmdir "${pkgdir}/var/mdm"
+	#mdkir "${pkgdir}/var/log/mdm"
+	#chmod 1770 "${pkgdir}/var/log/mdm"
+	#rm -rf "${pkgdir}/var/run"
 }
