--- a/mate-doc-utils/distro/archlinux/PKGBUILD
+++ b/mate-doc-utils/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-doc-utils
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="Documentation utilities for MATE"
 arch=('any')
@@ -7,6 +7,7 @@ license=('GPL' 'LGPL')
 depends=('libxslt' 'python2' 'docbook-xml' 'rarian' 'gnome-doc-utils')
 makedepends=('pkgconfig' 'intltool')
 #conflicts=('gnome-doc-utils')
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
 sha256sums=('9fd377f232acb35eac5de63f476122e14ff5710a2dd10a7f685888a3c8bd85cf')
