--- a/mate-session-manager/distro/archlinux/PKGBUILD
+++ b/mate-session-manager/distro/archlinux/PKGBUILD
@@ -1,12 +1,12 @@
 pkgname=mate-session-manager
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="The MATE Session Handler"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
 depends=('upower' 'gtk2' 'mate-conf' 'startup-notification' 'hicolor-icon-theme' 'libxtst' 'mate-polkit')
 makedepends=('pkgconfig' 'intltool' 'xtrans')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 install=mate-session-manager.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
