--- a/mate-settings-daemon/distro/archlinux/PKGBUILD
+++ b/mate-settings-daemon/distro/archlinux/PKGBUILD
@@ -1,17 +1,17 @@
 pkgname=mate-settings-daemon
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="The MATE Settings daemon"
 arch=('i686' 'x86_64')
 license=('GPL')
 depends=('libmatekbd' 'mate-desktop' 'libmatenotify' 'gstreamer0.10-base' 'hicolor-icon-theme')
 makedepends=('intltool' 'pkgconfig')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 install=mate-settings-daemon.install
 groups=('mate')
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('1b900e5fda6dac8f54b7fa5bb3a2131011bb1fa01d86447f42193d0e5d151995')
+sha256sums=('fc9b1b107d92ea5037355a178e8b7ba1c86c12d92b62a149d9c121fed075edd9')
 
 build() {
 	cd "$srcdir/$pkgname"
