--- a/mate-themes/distro/archlinux/PKGBUILD
+++ b/mate-themes/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=mate-themes
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="Default themes for the MATE desktop"
 arch=('i686' 'x86_64')
@@ -8,6 +8,7 @@ depends=('gtk2' 'gtk-engines')
 makedepends=('intltool')
 replaces=('gnome-themes')
 conflicts=('gnome-themes')
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
