--- a/mate-vfs/distro/archlinux/PKGBUILD
+++ b/mate-vfs/distro/archlinux/PKGBUILD
@@ -1,12 +1,12 @@
 pkgname=mate-vfs
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="The MATE Virtual File System"
 arch=(i686 x86_64)
 license=('LGPL')
 depends=('fam' 'mate-conf' 'bzip2' 'avahi' 'smbclient' 'mate-mime-data') #  'krb5'   'gnutls'
 makedepends=('pkgconfig' 'intltool' 'gtk-doc' 'mate-common')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 install=mate-vfs.install
