--- a/mate-window-manager/distro/archlinux/PKGBUILD
+++ b/mate-window-manager/distro/archlinux/PKGBUILD
@@ -1,18 +1,18 @@
 pkgname=mate-window-manager
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="A window manager for MATE"
 arch=(i686 x86_64)
 license=('GPL')
 depends=('mate-conf' 'mate-dialogs' 'libgtop' 'libwnck') #  'libcanberra' 'startup-notification'
 makedepends=('intltool' 'pkgconfig' 'mate-doc-utils')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 install=mate-window-manager.install
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
 		metacity-restartstyle.patch)
-sha256sums=('af6ac6a42e7e2775af04d3b530ee4080fad1a14b6aed811ca9e336ea5cfb8255'
+sha256sums=('e3bb0aa6089aa3911a2f70e1297619f2033fe801761ea1c979756570ee1bb7b7'
             'ea2450ca3e4fb59166ec18ff4844cc61cb16865880dc6b125078a3ab47bf2caf')
 
 build() {
