--- a/libmate/distro/archlinux/PKGBUILD
+++ b/libmate/distro/archlinux/PKGBUILD
@@ -1,12 +1,12 @@
 pkgname=libmate
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="Common libraries for MATE"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('LGPL')
 depends=( 'ttf-freefont' 'mate-conf')
 makedepends=('mate-vfs' 'libmatecomponent' 'gvfs' 'libcanberra')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 install=libmate.install
@@ -17,7 +17,7 @@ install=libmate.install
 # http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz
 
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('25334b6977e39ebf3b3c055fb63db07bd49a0766383e16818bd250d71b499ad6')
+sha256sums=('171285849ba18c8bed04e427c780bb07323043501aac6d2424dcbc52ff4c2718')
 
 build() {
 	cd "${srcdir}/${pkgname}"
