--- a/libmatecanvas/distro/archlinux/PKGBUILD
+++ b/libmatecanvas/distro/archlinux/PKGBUILD
@@ -1,15 +1,16 @@
 pkgname=libmatecanvas
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="The MATE Canvas library"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('LGPL')
 depends=('libglade' 'libart-lgpl')
 makedepends=('pkgconfig' 'intltool')
+options=('!emptydirs' '!libtool')
 groups=('mate')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('f9032965e1f01dc2e61bef40985550d55cec3854cf3d34928aa1e3a7ac633618')
+sha256sums=('1ec49a4e55bb8fd27c5e68017ae0afdd356446e9d33a646fd282c15e76ee5789')
 
 build() {
 	cd "${srcdir}/${pkgname}"
