--- a/libmateui/distro/archlinux/PKGBUILD
+++ b/libmateui/distro/archlinux/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=libmateui
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="User Interface library for MATE"
 arch=('i686' 'x86_64')
@@ -7,7 +7,7 @@ license=('LGPL')
 depends=('libmatecomponentui' 'libmatekeyring' 'libsm')
 makedepends=('intltool' 'pkgconfig')
 groups=('mate')
-#options=('!libtool')
+options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
 sha256sums=('75919a9f588db6b4f2df9ff7f09b339e4319a47c4f4365e24b499735e00e5927')
