--- a/mate-panel/distro/archlinux/PKGBUILD
+++ b/mate-panel/distro/archlinux/PKGBUILD
@@ -1,12 +1,12 @@
 pkgname=mate-panel
-pkgver=2011.08.31
+pkgver=2011.9.26
 pkgrel=1
 pkgdesc="The MATE Panel"
 arch=('i686' 'x86_64')
 license=('GPL')
 depends=('libwnck' 'mate-conf' 'mate-menus' 'mate-desktop' 'librsvg' 'hicolor-icon-theme' 'libcanberra' 'libmatecomponentui' 'libmateweather') # 'evolution-data-server'
 makedepends=('mate-doc-utils' 'pkgconfig' 'intltool' 'networkmanager')
-options=('!emptydirs')
+options=('!emptydirs' '!libtool')
 install=mate-panel.install
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
 sha256sums=('c7b74561fd0f019995939b8ee9c23557702b9ade7b48505af86effe28a466268')
@@ -15,8 +15,6 @@ groups=('mate')
 
 build() {
 	cd "${srcdir}/${pkgname}"
-	# Python2 fix
-	#sed -i '1s|#!/usr/bin/env python$|&2|' mate-panel/mate-panel-add
 
 	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static \
