--- a/libmatecanvas/distro/archlinux/PKGBUILD
+++ b/libmatecanvas/distro/archlinux/PKGBUILD
@@ -6,11 +6,11 @@ arch=('i686' 'x86_64')
 license=('LGPL')
 depends=('libglade' 'libart-lgpl')
 makedepends=('pkgconfig' 'intltool')
-options=('!emptydirs' '!libtool')
+options=('!libtool')
 groups=('mate')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('1ec49a4e55bb8fd27c5e68017ae0afdd356446e9d33a646fd282c15e76ee5789')
+sha256sums=('ecbd0fc591406998a8cfae82d080edf5f86e3858dd44ea4dfb325c8d9dadb4bc')
 
 build() {
 	cd "${srcdir}/${pkgname}"
