--- a/libmatekbd/distro/archlinux/PKGBUILD
+++ b/libmatekbd/distro/archlinux/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=libmatekbd
 pkgver=2011.9.26
-pkgrel=1
+pkgrel=2
 pkgdesc="MATE keyboard library"
 arch=('i686' 'x86_64')
 license=('LGPL')
@@ -8,11 +8,10 @@ depends=('libxklavier' 'mate-conf') #  'dconf'
 makedepends=('intltool' 'pkgconfig')
 groups=('mate')
 url="http://matsusoft.com.ar/projects"
-# there is a file with .la extension, such a bug
-#options=('!emptydirs' '!libtool')
+options=('!emptydirs' '!libtool')
 install=libmatekbd.install
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('720c98c7f2c69d0c4b1db76da433a5bbbee414edb9d5689a632da13cbd456730')
+sha256sums=('c0f2363477e10e2fa9a7c0263dbc466a110e8bab154b2688485de7963fa77cb4')
 
 build() {
 	cd "${srcdir}/${pkgname}"
