--- a/mate-conf/distro/archlinux/PKGBUILD
+++ b/mate-conf/distro/archlinux/PKGBUILD
@@ -1,19 +1,19 @@
 pkgname=mate-conf
 pkgver=2011.9.26
-pkgrel=1
+pkgrel=3
 pkgdesc="A configuration database system"
 arch=(i686 x86_64)
 license=('LGPL')
 depends=('mate-corba' 'libxml2' 'polkit' 'libldap' 'dbus-glib' 'gtk2')
 makedepends=('pkgconfig' 'intltool' 'gtk-doc' 'gobject-introspection')
 groups=('mate')
-options=('!emptydirs' '!libtool')
+options=('!libtool')
 install=mate-conf.install
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download
 		mateconf-merge-schema
 		mateconfpkg)
-sha256sums=('db6f383016921c87db273a5a7cdc8a9a20415638c62e256ef0465e395101f245'
+sha256sums=('8f0974bb50eb1026536e5c5fb61fea700f2e39d4cbcfc1f21889875d04841c3f'
             '78ccdb9c963400694c944ee193b2fa135dcb39e0d9f1dc393fa659131d591076'
             '2e06a02b5312ee7853be356c1b0131ce6e85fb2949c4aef54c1e795f27fdc1dd')
 
@@ -23,7 +23,7 @@ build() {
 	sed -i '1s|#!/usr/bin/env python$|&2|' gsettings/gsettings-schema-convert
 	./configure --prefix=/usr --sysconfdir=/etc \
 		--libexecdir=/usr/lib/MateConf \
-		--localstatedir=/var \
+		--localstatedir=/var --disable-static \
 		--enable-defaults-service --enable-gsettings-backend=no || return 1
 	make || return 1
 }
