--- a/mate-settings-daemon/distro/archlinux/PKGBUILD
+++ b/mate-settings-daemon/distro/archlinux/PKGBUILD
@@ -6,12 +6,12 @@ arch=('i686' 'x86_64')
 license=('GPL')
 depends=('libmatekbd' 'mate-desktop' 'libmatenotify' 'gstreamer0.10-base' 'hicolor-icon-theme')
 makedepends=('intltool' 'pkgconfig')
-options=('!emptydirs' '!libtool')
+#options=('!libtool')
 url="http://matsusoft.com.ar/projects"
 install=mate-settings-daemon.install
 groups=('mate')
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('fc9b1b107d92ea5037355a178e8b7ba1c86c12d92b62a149d9c121fed075edd9')
+sha256sums=('29149162282625c2c37ed8d5772318de320b2fbef2f293be6d7fa95c711fa7e6')
 
 build() {
 	cd "$srcdir/$pkgname"
