--- a/libmatenotify/distro/archlinux/PKGBUILD
+++ b/libmatenotify/distro/archlinux/PKGBUILD
@@ -10,15 +10,15 @@ groups=('mate')
 options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('7ca728029e1e53c9cf4ae4f0dd3acd2ac6c0fc61fb25826c4faf0c2fbe15be6e')
+sha256sums=('2378841fb2cdc0f86532260e4a90bf545e9b1f8b37d18c225a1ffa7d9f2f7dbd')
 
 build() {
 	cd "${srcdir}/${pkgname}"
-	./configure --prefix=/usr --disable-static
-	make
+	./configure --prefix=/usr --disable-static || return 1
+	make || return 1
 }
 
 package() {
 	cd "${srcdir}/${pkgname}"
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="${pkgdir}" install || return 1
 }
