--- a/mate-vfs/distro/archlinux/PKGBUILD
+++ b/mate-vfs/distro/archlinux/PKGBUILD
@@ -1,17 +1,17 @@
 pkgname=mate-vfs
 pkgver=2011.9.26
-pkgrel=1
+pkgrel=2
 pkgdesc="The MATE Virtual File System"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('fam' 'mate-conf' 'bzip2' 'avahi' 'smbclient' 'mate-mime-data') #  'krb5'   'gnutls'
+depends=('mate-conf' 'bzip2' 'smbclient' 'mate-mime-data') #  'krb5' 'avahi' 'gnutls' 'fam'
 makedepends=('pkgconfig' 'intltool' 'gtk-doc' 'mate-common')
 options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 install=mate-vfs.install
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('bdf15c16df4f8431e255748600ce872e829c1e21970ccc51b280d2404e31d4da')
+sha256sums=('4faa653d58b1769f3146d853dd57cca3d35771aaa530686b48c46f5ee0b55c99')
 
 build() {
 	cd "${srcdir}/${pkgname}"
