--- a/mate-settings-daemon/distro/archlinux/PKGBUILD
+++ b/mate-settings-daemon/distro/archlinux/PKGBUILD
@@ -1,12 +1,12 @@
 pkgname=mate-settings-daemon
 pkgver=2011.9.26
-pkgrel=1
+pkgrel=2
 pkgdesc="The MATE Settings daemon"
 arch=('i686' 'x86_64')
 license=('GPL')
 depends=('libmatekbd' 'mate-desktop' 'libmatenotify' 'gstreamer0.10-base' 'hicolor-icon-theme')
 makedepends=('intltool' 'pkgconfig')
-#options=('!libtool')
+options=('!libtool')
 url="http://matsusoft.com.ar/projects"
 install=mate-settings-daemon.install
 groups=('mate')
