G_CONST_RETURN is deprecated

--- a/mate-dialogs/distro/archlinux/PKGBUILD
+++ b/mate-dialogs/distro/archlinux/PKGBUILD
@@ -17,7 +17,7 @@ sha256sums=('08bf485c56238fdd4478faa7bd6c5caa54b07e2d7509eed802f1c09ed883f5f3')
 build() {
 	cd "${srcdir}/${pkgname}"
 	./configure --prefix=/usr --sysconfdir=/etc \
-		--localstatedir=/var --disable-scrollkeeper
+		--localstatedir=/var --disable-static --disable-scrollkeeper
 	make
 }
 
