--- a/mate-session-manager/distro/archlinux/PKGBUILD
+++ b/mate-session-manager/distro/archlinux/PKGBUILD
@@ -4,7 +4,7 @@ pkgrel=1
 pkgdesc="The MATE Session Handler"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
-depends=('upower' 'gtk2' 'mate-conf' 'startup-notification' 'hicolor-icon-theme' 'libxtst' 'mate-polkit')
+depends=('upower' 'gtk2' 'mate-conf' 'hicolor-icon-theme' 'libxtst' 'mate-polkit') #  'startup-notification'
 makedepends=('pkgconfig' 'intltool' 'xtrans')
 options=('!emptydirs' '!libtool')
 install=mate-session-manager.install
