implementando g_application y gtk_application de, gtk-3 y glib-2.26

--- a/mate-desktop/mate-about/Makefile.in
+++ b/mate-desktop/mate-about/Makefile.in
@@ -57,7 +57,7 @@ PROGRAMS = $(bin_PROGRAMS)
 am_mate_about_OBJECTS = mate_about-mate-about.$(OBJEXT)
 mate_about_OBJECTS = $(am_mate_about_OBJECTS)
 am__DEPENDENCIES_1 =
-mate_about_DEPENDENCIES = $(am__DEPENDENCIES_1)
+mate_about_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 AM_V_lt = $(am__v_lt_$(V))
 am__v_lt_ = $(am__v_lt_$(AM_DEFAULT_VERBOSITY))
 am__v_lt_0 = --silent
@@ -239,6 +239,8 @@ SHELL = @SHELL@
 STARTUP_NOTIFICATION_PACKAGE = @STARTUP_NOTIFICATION_PACKAGE@
 STARTUP_NOTIFICATION_REQUIRED = @STARTUP_NOTIFICATION_REQUIRED@
 STRIP = @STRIP@
+UNIQUE_CFLAGS = @UNIQUE_CFLAGS@
+UNIQUE_LIBS = @UNIQUE_LIBS@
 USE_NLS = @USE_NLS@
 VERSION = @VERSION@
 WARN_CFLAGS = @WARN_CFLAGS@
@@ -309,8 +311,8 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 mate_about_SOURCES = mate-about.c mate-about.h
-mate_about_CFLAGS = $(MATE_ABOUT_CFLAGS)
-mate_about_LDADD = $(MATE_ABOUT_LIBS)
+mate_about_CFLAGS = $(MATE_ABOUT_CFLAGS) $(UNIQUE_CFLAGS)
+mate_about_LDADD = $(MATE_ABOUT_LIBS) $(UNIQUE_LIBS)
 INCLUDES = \
 	-I$(top_srcdir) \
 	$(MATE_ABOUT_CFLAGS) \
