--- a/mate-desktop/configure.in
+++ b/mate-desktop/configure.in
@@ -216,6 +216,21 @@ AC_SUBST(GETTEXT_PACKAGE)
 
 AM_GLIB_GNU_GETTEXT
 
+dnl ============================================================================
+dnl | se comprueba glib >= 2.26
+dnl | de lo contrario, se intenta utilizar libunique
+dnl ============================================================================
+PKG_CHECK_MODULES(UNIQUE, glib-2.0 < 2.26 unique-1.0,
+	enable_libunique=yes,
+	enable_libunique=no)
+
+AC_SUBST([UNIQUE_CFLAGS])
+AC_SUBST([UNIQUE_LIBS])
+
+if test "x$enable_libunique" = "xyes"; then
+	UNIQUE_CFLAGS="$UNIQUE_CFLAGS -DUSE_UNIQUE=1"
+fi
+
 
 dnl Don't use AC_PROG_AWK since we need the full pathname.
 AC_PATH_PROGS(AWK, mawk gawk nawk awk, )
@@ -281,6 +296,7 @@ echo "
         Warn about deprecations:      ${enable_deprecations}
 
         Build mate-about:             ${enable_mate_about}
+        Use libunique:                ${enable_libunique}
         Build desktop-wide docs:      ${enable_desktop_docs}
         Use external pnp.ids:         ${EXTERNAL_PNP_IDS}
         Startup notification support: ${have_startup_notification}
