--- a/mate-desktop/mate-about/Makefile.am
+++ b/mate-desktop/mate-about/Makefile.am
@@ -1,13 +1,12 @@
 bin_PROGRAMS = mate-about
 mate_about_SOURCES = mate-about.c mate-about.h
-mate_about_CFLAGS = $(MATE_ABOUT_CFLAGS)
-mate_about_LDADD = $(MATE_ABOUT_LIBS)
+mate_about_CFLAGS = $(MATE_ABOUT_CFLAGS) $(UNIQUE_CFLAGS)
+mate_about_LDADD = $(MATE_ABOUT_LIBS) $(UNIQUE_LIBS)
 
 INCLUDES = \
 	-I$(top_srcdir) \
 	$(MATE_ABOUT_CFLAGS) \
 	-DLOCALE_DIR=\"$(datadir)/locale\"
-
 
 @INTLTOOL_DESKTOP_RULE@
 
