testing some about mate-corba make

--- a/mate-corba/configure.in
+++ b/mate-corba/configure.in
@@ -1,10 +1,10 @@
 m4_define([matecorba_major_version],[2011])
 m4_define([matecorba_minor_version],[9])
-m4_define([matecorba_micro_version],[25])
+m4_define([matecorba_micro_version],[27])
 m4_define([matecorba_version],[matecorba_major_version.matecorba_minor_version.matecorba_micro_version])
 
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT([MateCORBA2],[matecorba_version],[http://bugzilla.mate.org/enter_bug.cgi?product=MateCORBA2],[MateCORBA2])
+AC_INIT([MateCORBA2],[matecorba_version],[https://github.com/Perberos/Mate-Desktop-Environment],[MateCORBA2])
 
 # Process this file with autoconf to produce a configure script.
 # require autoconf 2.54
