--- a/mate-corba/matecorba2-config.in
+++ b/mate-corba/matecorba2-config.in
@@ -1,12 +1,11 @@
 #! /bin/sh
 
 [ -z "$PKG_CONFIG" ] && PKG_CONFIG="pkg-config"
-
-prefix=`${PKG_CONFIG} --variable prefix ORBit-2.0`
-exec_prefix=`${PKG_CONFIG} --variable exec_prefix ORBit-2.0`
+prefix=`${PKG_CONFIG} --variable prefix MateCORBA-2.0`
+exec_prefix=`${PKG_CONFIG} --variable exec_prefix MateCORBA-2.0`
 exec_prefix_set=no
-includedir=`${PKG_CONFIG} --variable includedir ORBit-2.0`
-libdir=`${PKG_CONFIG} --variable libdir ORBit-2.0`
+includedir=`${PKG_CONFIG} --variable includedir MateCORBA-2.0`
+libdir=`${PKG_CONFIG} --variable libdir MateCORBA-2.0`
 
 usage()
 {
