--- a/mate-doc-utils/tools/Makefile.in
+++ b/mate-doc-utils/tools/Makefile.in
@@ -216,7 +216,7 @@ top_srcdir = @top_srcdir@
 @ENABLE_BUILD_UTILS_TRUE@aclocaldir = $(datadir)/aclocal
 @ENABLE_BUILD_UTILS_TRUE@aclocal_DATA = mate-doc-utils.m4
 @ENABLE_BUILD_UTILS_TRUE@sharedir = $(datadir)/mate-doc-utils
-@ENABLE_BUILD_UTILS_TRUE@share_DATA = mate-doc-utils.make
+@ENABLE_BUILD_UTILS_TRUE@share_DATA = mate-doc-utils.make mate-debian.sh
 @ENABLE_BUILD_UTILS_TRUE@bin_SCRIPTS = mate-doc-prepare mate-doc-tool
 pkgconfigdir = $(datadir)/pkgconfig
 pkgconfig_DATA = mate-doc-utils.pc
