--- a/mate-doc-utils/distro/ubuntu/build
+++ b/mate-doc-utils/distro/ubuntu/build
@@ -17,9 +17,9 @@ build() {
 	# entramos a la carpeta
 	cd ${pkgname}
 
-	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
+	./configure --prefix=/usr --sysconfdir=/etc \
 		--mandir=/usr/share/man --localstatedir=/var --disable-scrollkeeper || return 1
-	PYTHON=/usr/bin/python2 make || return 1
+	make || return 1
 
 	make DESTDIR="$pkgdir" install || return 1
 
