conflict with gnome-doc-utils (http://ubuntuforums.org/showpost.php?p=11333260&postcount=5)

--- a/mate-doc-utils/distro/ubuntu/build
+++ b/mate-doc-utils/distro/ubuntu/build
@@ -24,11 +24,11 @@ build() {
 	make DESTDIR="$pkgdir" install || return 1
 
 	# files with conflicts with gnome-doc-utils
-	#rm -rf "${pkgdir}/usr/share/xml/mallard/"
-	#rm "${pkgdir}/usr/share/pkgconfig/xml2po.pc"
-	#rm -rf "${pkgdir}/usr/share/man/"
-	#rm -rf "${pkgdir}/usr/lib/"
-	#rm "${pkgdir}/usr/bin/xml2po"
+	rm -rf "${pkgdir}/usr/share/xml/mallard/"
+	rm "${pkgdir}/usr/share/pkgconfig/xml2po.pc"
+	rm -rf "${pkgdir}/usr/share/man/"
+	rm -rf "${pkgdir}/usr/lib/"
+	rm "${pkgdir}/usr/bin/xml2po"
 }
 
 # esto incluye la parte que se repite en la mayoria de los builds
