--- a/mate-desktop/configure.in
+++ b/mate-desktop/configure.in
@@ -220,15 +220,28 @@ dnl ============================================================================
 dnl | se comprueba glib >= 2.26
 dnl | de lo contrario, se intenta utilizar libunique
 dnl ============================================================================
-PKG_CHECK_MODULES(UNIQUE, glib-2.0 < 2.26 unique-1.0,
-	enable_libunique=yes,
-	enable_libunique=no)
+case "$with_gtk" in
+	2.0) LIBUNIQUE_VERSION=1.0
+		;;
+	3.0) LIBUNIQUE_VERSION=3.0
+		;;
+esac
+
+PKG_CHECK_MODULES(UNIQUE, unique-$LIBUNIQUE_VERSION, enable_libunique=yes, enable_libunique=no)
 
 AC_SUBST([UNIQUE_CFLAGS])
 AC_SUBST([UNIQUE_LIBS])
 
+AC_ARG_ENABLE(unique, [  --enable-unique         enable the use of libunique instead of g_application or gtk_application], enable_libunique=yes,)
+
 if test "x$enable_libunique" = "xyes"; then
 	UNIQUE_CFLAGS="$UNIQUE_CFLAGS -DUSE_UNIQUE=1"
+	# fix for deprecated on 2.26
+	# unique en la version 1.0, contiene simbolos no definidos a partir de
+	# glib 2.26, pero puede ser obviado si se utiliza -DG_CONST_RETURN=const
+	if $PKG_CONFIG --atleast-version 2.26 glib-2.0; then
+		UNIQUE_CFLAGS="$UNIQUE_CFLAGS -DG_CONST_RETURN=const"
+	fi
 fi
 
 
