se detecta la version de unique al hacer ./configure

--- a/mate-desktop/configure.in
+++ b/mate-desktop/configure.in
@@ -217,7 +217,7 @@ AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
 
 dnl ============================================================================
-dnl | se comprueba glib >= 2.26
+dnl | se comprueba unique
 dnl | de lo contrario, se intenta utilizar libunique
 dnl ============================================================================
 case "$with_gtk" in
@@ -291,29 +291,29 @@ dnl - Show summary
 dnl ---------------------------------------------------------------------------
 
 echo "
-              mate-desktop $VERSION
-              `echo mate-desktop $VERSION | sed "s/./=/g"`
+mate-desktop $VERSION `echo mate-desktop $VERSION | sed "s/./=/g"`
 
-        prefix:                       ${prefix}
-        exec_prefix:                  ${exec_prefix}
-        libdir:                       ${libdir}
-        bindir:                       ${bindir}
-        sbindir:                      ${sbindir}
-        sysconfdir:                   ${sysconfdir}
-        localstatedir:                ${localstatedir}
-        datadir:                      ${datadir}
-        source code location:         ${srcdir}
-        compiler:                     ${CC}
-        cflags:                       ${CFLAGS}
-        Maintainer mode:              ${USE_MAINTAINER_MODE}
-        Warn about deprecations:      ${enable_deprecations}
+    prefix:                       ${prefix}
+    exec_prefix:                  ${exec_prefix}
+    libdir:                       ${libdir}
+    bindir:                       ${bindir}
+    sbindir:                      ${sbindir}
+    sysconfdir:                   ${sysconfdir}
+    localstatedir:                ${localstatedir}
+    datadir:                      ${datadir}
+    source code location:         ${srcdir}
+    compiler:                     ${CC}
+    cflags:                       ${CFLAGS}
+    Maintainer mode:              ${USE_MAINTAINER_MODE}
+    Warn about deprecations:      ${enable_deprecations}
 
-        Build mate-about:             ${enable_mate_about}
-        Use libunique:                ${enable_libunique}
-        Build desktop-wide docs:      ${enable_desktop_docs}
-        Use external pnp.ids:         ${EXTERNAL_PNP_IDS}
-        Startup notification support: ${have_startup_notification}
-        XRandr support:               ${have_randr}
-        Build gtk-doc documentation:  ${enable_gtk_doc}
+    Gtk+ version:                 ${GTK_API_VERSION}
+    Build mate-about:             ${enable_mate_about}
+    Use libunique:                ${enable_libunique}
+    Build desktop-wide docs:      ${enable_desktop_docs}
+    Use external pnp.ids:         ${EXTERNAL_PNP_IDS}
+    Startup notification support: ${have_startup_notification}
+    XRandr support:               ${have_randr}
+    Build gtk-doc documentation:  ${enable_gtk_doc}
 
 "
