--- a/mate-file-manager/configure.in
+++ b/mate-file-manager/configure.in
@@ -19,8 +19,34 @@ dnl Interface break is not allowed.
 m4_define(caja_extension_current,  3)
 m4_define(caja_extension_revision, 0)
 
-AC_INIT([caja],[2011.9.25],
-	[https://github.com/Perberos/Mate-Desktop-Environment])
+AC_INIT([caja], [2011.9.25], [https://github.com/Perberos/Mate-Desktop-Environment])
+
+dnl ---------------------------------------------------------------------------
+dnl GTK library version
+dnl ---------------------------------------------------------------------------
+GTK_API_VERSION=2.0
+GTK_REQUIRED=2.22.0
+
+AC_MSG_CHECKING([which gtk+ version to compile against])
+AC_ARG_WITH([gtk],
+    [AS_HELP_STRING([--with-gtk=2.0|3.0],[which gtk+ version to compile against (default: 2.0)])],
+    [
+        case "$with_gtk" in
+            2.0|3.0) ;;
+            *) AC_MSG_ERROR([invalid gtk version specified]) ;;
+        esac
+    ],
+    [with_gtk=2.0])
+AC_MSG_RESULT([$with_gtk])
+
+case "$with_gtk" in
+  2.0) GTK_API_VERSION=2.0
+       GTK_REQUIRED=2.18.0
+       ;;
+  3.0) GTK_API_VERSION=3.0
+       GTK_REQUIRED=3.0.0
+       ;;
+esac
 
 dnl ===========================================================================
 
@@ -36,7 +62,7 @@ AC_SUBST([ACLOCAL_AMFLAGS], ["\${ACLOCAL_FLAGS}"])
 AC_SUBST(GLIB_REQUIRED, [glib_minver])
 AC_SUBST(MATE_DESKTOP_REQUIRED, [mate_desktop_minver])
 AC_SUBST(PANGO_REQUIRED, [pango_minver])
-AC_SUBST(GTK_REQUIRED, [gtk_minver])
+AC_SUBST(GTK_REQUIRED, [$GTK_REQUIRED])
 AC_SUBST(XML_REQUIRED, [xml_minver])
 AC_SUBST(GAIL_REQUIRED)
 
@@ -59,16 +85,15 @@ AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
 AC_CHECK_LIB(m, floor)
 
 PKG_CHECK_MODULES(ALL, [
-	glib-2.0		>= glib_minver
-	mate-desktop-2.0	>= mate_desktop_minver
+	glib-2.0 >= glib_minver
+	mate-desktop-2.0 >= mate_desktop_minver
 	gthread-2.0
 	gio-unix-2.0
 	gio-2.0
-	pango			>= pango_minver
-	gtk+-2.0		>= gtk_minver
-	libxml-2.0		>= xml_minver
-	gail			>= gail_minver
-	unique-1.0
+	pango >= pango_minver
+	gtk+-$GTK_API_VERSION >= $GTK_REQUIRED
+	libxml-2.0 >= xml_minver
+	gail >= gail_minver
 ])
 dnl ==========================================================================
 
@@ -232,6 +257,38 @@ if test "x$enable_packagekit" != "xno"; then
 	AC_DEFINE(ENABLE_PACKAGEKIT, 1, [define to enable PackageKit mimetype installer])
 fi
 
+
+dnl ============================================================================
+dnl | se comprueba unique
+dnl | de lo contrario, se intenta utilizar libunique
+dnl ============================================================================
+case "$with_gtk" in
+	2.0) LIBUNIQUE_VERSION=1.0
+		;;
+	3.0) LIBUNIQUE_VERSION=3.0
+		;;
+esac
+
+PKG_CHECK_MODULES(UNIQUE, unique-$LIBUNIQUE_VERSION, enable_libunique=yes, enable_libunique=no)
+
+AC_SUBST([UNIQUE_CFLAGS])
+AC_SUBST([UNIQUE_LIBS])
+
+AC_ARG_ENABLE(unique, [  --enable-unique         enable the use of libunique instead of g_application or gtk_application], enable_libunique=yes,)
+
+if test "x$enable_libunique" = "xyes"; then
+	UNIQUE_CFLAGS="$UNIQUE_CFLAGS -DUSE_UNIQUE=1"
+	# fix for deprecated on 2.26
+	# unique en la version 1.0, contiene simbolos no definidos a partir de
+	# glib 2.26, pero puede ser obviado si se utiliza -DG_CONST_RETURN=const
+	if $PKG_CONFIG --atleast-version 2.26 glib-2.0; then
+		UNIQUE_CFLAGS="$UNIQUE_CFLAGS -DG_CONST_RETURN=const"
+	fi
+
+	EXTRA_CORE_MODULES="$EXTRA_CORE_MODULES unique-$LIBUNIQUE_VERSION"
+fi
+
+
 dnl ==========================================================================
 
 dnl Turn on the additional warnings last, so -Werror doesn't affect other tests.
@@ -336,7 +393,7 @@ LIBCAJA_EXTENSION_LIBS="`$PKG_CONFIG --libs $LIBCAJA_EXTENSION_MODULES`"
 AC_SUBST(LIBCAJA_EXTENSION_LIBS)
 
 dnl core caja
-CORE_MODULES="glib-2.0 mate-desktop-2.0 gthread-2.0 gio-2.0 gio-unix-2.0 unique-1.0 gail mateconf-2.0 libxml-2.0 $EXTRA_CORE_MODULES"
+CORE_MODULES="glib-2.0 mate-desktop-2.0 gthread-2.0 gio-2.0 gio-unix-2.0 gail mateconf-2.0 libxml-2.0 $EXTRA_CORE_MODULES"
 CORE_CFLAGS="`$PKG_CONFIG --cflags $CORE_MODULES` $x_cflags"
 AC_SUBST(CORE_CFLAGS)
 CORE_LIBS="`$PKG_CONFIG --libs $CORE_MODULES` $x_libs"
@@ -408,16 +465,19 @@ test/Makefile
 AC_OUTPUT
 
 dnl ==========================================================================
+
 echo "
 caja-$VERSION:
 
-	prefix:                 ${prefix}
-	source code location:	${srcdir}
-	compiler:		${CC}
-	xmp support:		$msg_xmp
-	PackageKit support:     $msg_packagekit
+    prefix:                       ${prefix}
+    source code location:         ${srcdir}
+    compiler:                     ${CC}
+    xmp support:                  $msg_xmp
+    Use libunique:                ${enable_libunique}
+    Gtk+ version:                 ${GTK_API_VERSION}
+    PackageKit support:           $msg_packagekit
 
-	profiling support:      ${profiling_support}
-	caja-extension documentation: ${enable_gtk_doc}
-	caja-extension introspection: ${found_introspection}
+    profiling support:            ${profiling_support}
+    caja-extension documentation: ${enable_gtk_doc}
+    caja-extension introspection: ${found_introspection}
 "
